fix pom files